# EpisodicPivot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Episodic Pivot Initial requirement document.docx  EpisodicPivot.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: data_audit.py
src/ep/: __init__.py  config.py
src/ep/backtest/: __init__.py
src/ep/dashboard/: __init__.py
src/ep/data/: __init__.py  cache.py  fmp.py  provider.py
src/ep/execution/: __init__.py
src/ep/journal/: __init__.py
src/ep/metrics/: __init__.py
src/ep/reports/: __init__.py
src/ep/risk/: __init__.py
src/ep/scanner/: __init__.py
src/ep/scoring/: __init__.py
tests/: __init__.py  test_config.py  test_data_provider.py  test_fmp_provider.py
