[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "episodic-pivot"
version = "0.0.1"
description = "Automated Episodic Pivot swing-trading system."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "happybasu", email = "happybasu@gmail.com" }]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
